--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,14 +20,15 @@
 
       <ul class="navbar-nav">
 
-        <li class="nav-item">
-
-
-
 
         <li class="nav-item">
+          <a class="nav-link active" routerLinkActive="/homepage" href="/homepage">Ana Sayfa
 
-          <a class="nav-link active" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
+        </a></li>
+
+        <li class="nav-item">
+
+          <a class="nav-link active" routerLink="/profile" routerLinkActive="active" aria-current="page" href="profile" >Profilim</a>
 
         </li>
 
@@ -36,8 +37,6 @@
           <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('contact')">İletişim</a>
 
         </li>
-
-
 
 
       </ul>
@@ -106,7 +105,7 @@
 
                   <p>-</p>
                  </div>
-                
+
                 </div>
               </div>
             </div>
@@ -116,17 +115,17 @@
                   <div class="bio-row">
 
                     <h6>Cinsiyet:</h6>
-  
+
                     <p>-</p>
-  
+
                   </div>
-  
+
                   <div class="bio-row">
-  
+
                     <h6>Konum:</h6>
-  
+
                     <p>-</p>
-  
+
                    </div>
               <div class="bio-row1">
                 <h6>Şuan evcil hayvanınız var mı?</h6>
@@ -186,7 +185,7 @@
                         <span class="visually-hidden">Loading...</span>
                       </div>
                       <p>merhaba ben mina en yakın arkadaşımı arıyorum..</p>
-                      
+
 
                     </div>
                   </div>
@@ -202,14 +201,14 @@
                         <span class="visually-hidden">Loading...</span>
                       </div>
                       <p>merhaba ben mina en yakın arkadaşımı arıyorum..</p>
-                      
+
 
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            
+
               </div>
             </div>
           </div>
