Card Model Created...

--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -78,6 +78,15 @@ body {
   /* transform: translate(-5px, -10px); */
 }
 
+.ikonlar {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+
+
+
 .hover-zoom {
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -120,13 +129,27 @@ body {
 
 .btn-warning{
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
   opacity: 0; /* Butonu varsayılan olarak gizleyin */
   transition: opacity 1s ease; /* Geçiş animasyonu için süre ve geçiş işlevini ayarlayın */
 }
+.btn-info {
+  position: absolute;
+  top: calc(50% + 20px); /* İlk butona göre 50 piksel aşağıda hizala */
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+  opacity: 1; /* Butonu varsayılan olarak gizleyin */
+  transition: opacity 1s ease; /* Geçiş animasyonu için süre ve geçiş işlevini ayarlayın */
+  background-color: #4BA47E ;
+  border: none;
+}
+
+
+
 
 .card:hover .btn-warning {
   opacity: 1; /* Hovar durumunda butonun görünürlüğünü ayarlayın */
