--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -84,9 +84,31 @@
                 <h5 class="card-title">{{ kedi.adi }}</h5>
                 <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
                 <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>
-                <button class="btn btn-warning btn-lg" *ngIf="kedi.showButton" (click)="playAnimation(i)">
-                  <i class="fas fa-comments"></i>
-                </button>
+                <div class="ikonlar">
+                  <button class="btn btn-warning btn-lg" *ngIf="kedi.showButton" (click)="playAnimation(i)">
+                    <i class="fas fa-comments"></i>
+                  </button>
+                  <button class="btn btn-info btn-lg" *ngIf="kedi.showButton" (click)="showDialog()" icon="pi pi-external-link" label="Show">
+                    <i class="fas fa-info-circle"></i>
+                  </button>
+                </div>
+
+              </div>
+
+              <div class="card flex justify-content-center">
+
+                <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+            
+                   
+            </p-dialog>
+            </div>
+
+            
+            </div>
                 <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
               </div>
             </div>
@@ -129,8 +151,8 @@
       </div>
     </div>
   </div>
-</div>
-</div>
+
+
 
 
 
