--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -107,11 +107,22 @@
           <div class="card flex justify-content-center">
 
             <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
-                <p>
+              <div class="modal-content">
+                <div id="modalContent">
+                  <img [src]="'assets/' + kedi.gorseli" alt="Kedi Görseli" class="modal-image">
+                  <div class="text-container">
+                    <h5 class="card-title">{{ kedi.adi }}</h5>
+                    <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
+                    <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>  
+                    <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p> 
-        </p-dialog>
+                    </p> 
+                  </div>
+                </div>
+              </div>
+              
+            </p-dialog>
         </div>
         
         </div>
