--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,7 +6,7 @@
 
     <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
 
-      <img src="assets/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+      <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
 
     </a>
 
@@ -159,7 +159,7 @@
                 <div class="card-body">
                   <div class="card mb-4 mt-3">
                     <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
-                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <img src="assets/images/dog.png" alt="" style="border-radius: 50%; width: 12%;">
                       <div>
                         <h6>Mina</h6>
                       <h6>2 yaşında</h6>
@@ -175,7 +175,7 @@
                   </div>
                   <div class="card mb-4">
                     <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
-                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <img src="assets/images/dog.png" alt="" style="border-radius: 50%; width: 12%;">
                       <div>
                         <h6>Mina</h6>
                       <h6>2 yaşında</h6>
@@ -191,7 +191,7 @@
                   </div>
                   <div class="card mb-4">
                     <div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
-                      <img src="assets/dog.png" alt="" style="border-radius: 50%; width: 12%;">
+                      <img src="assets/images/dog.png" alt="" style="border-radius: 50%; width: 12%;">
                       <div>
                         <h6>Mina</h6>
                       <h6>2 yaşında</h6>
@@ -241,11 +241,11 @@
 
           <div class="social-media">
 
-            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/social-svg/facebook.svg" alt="Facebook"></a></li>
 
-          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/social-svg/instagram.svg" alt="Instagram"></a></li>
 
-          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/social-svg/twitter.svg" alt="Twitter"></a></li>
 
           </div>
 
@@ -281,7 +281,7 @@
 
       <div class="col-md-3  ">
 
-        <img src="assets/transparent-logo.png" alt="Logo" width="300" height="300">
+        <img src="assets/images/transparent-logo.png" alt="Logo" width="300" height="300">
 
       </div>
 
