--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg " id="home" style="background-color: #4BA47E; padding: 0px;">
     <div class="container">
       <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
-        <img src="assets/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+        <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
   <div id="carouselExampleAutoplaying" class="carousel slide mb-5" data-bs-ride="carousel" style="background-color: #4BA47E;;">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/banner-image.png" class="d-block w-100" alt="...">
+        <img src="assets/images/banner-image.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/banner-image3.png" class="d-block w-100" alt="...">
+        <img src="assets/images/banner-image3.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -61,17 +61,17 @@
       <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
         <div class="col-4 ">
           <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'kedi'" src="assets/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
+            <img (click)="seciliKategori = 'kedi'" src="assets/images/kedi-image.png" class="mr-2 btn-img rounded-circle bg-image hover-zoom">
           </div>
         </div>
         <div class="col-4">
           <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'köpek'" src="assets/dog.png" class="mr-2 btn-img rounded-circle">
+            <img (click)="seciliKategori = 'köpek'" src="assets/images/dog.png" class="mr-2 btn-img rounded-circle">
           </div>
         </div>
         <div class="col-4">
           <div class="rounded-left d-flex justify-content-center">
-            <img (click)="seciliKategori = 'kuş'" src="assets/kus-image.png" class="mr-2 btn-img rounded-circle">
+            <img (click)="seciliKategori = 'kuş'" src="assets/images/kus-image.png" class="mr-2 btn-img rounded-circle">
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
     <div class="row">
       <div class="col-md-2 " *ngFor="let kedi of kediKartlar; let i = index">
         <div class="card mb-4 category-card" (mouseenter)="kedi.showButton = true" (mouseleave)="kedi.showButton = false">
-          <img [src]="'assets/' + kedi.gorseli" alt="Kedi Görseli" class="card-img-top">
+          <img [src]="'assets/images/' + kedi.gorseli" alt="Kedi Görseli" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">{{ kedi.adi }}</h5>
             <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
@@ -109,7 +109,7 @@
             <p-dialog header="Long Content" [(visible)]="visible" [style]="{ width: '50vw', height: '300px' }">
               <div class="modal-content">
                 <div id="modalContent">
-                  <img [src]="'assets/' + kedi.gorseli" alt="Kedi Görseli" class="modal-image">
+                  <img [src]="'assets/images/' + kedi.gorseli" alt="Kedi Görseli" class="modal-image">
                   <div class="text-container">
                     <h5 class="card-title">{{ kedi.adi }}</h5>
                     <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
@@ -136,7 +136,7 @@
       <div class="row">
       <div class="col-md-2" *ngFor="let kopek of kopekKartlar; let i = index">
         <div class="card mb-4 category-card" (mouseenter)="kopek.showButton = true" (mouseleave)="kopek.showButton = false">
-          <img [src]="'assets/' + kopek.gorseli" alt="Kedi Görseli" class="card-img-top">
+          <img [src]="'assets/images/' + kopek.gorseli" alt="Kedi Görseli" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">{{ kopek.adi }}</h5>
             <p class="card-text">Yaşı: {{ kopek.yasi }}</p>
@@ -171,7 +171,7 @@
       <div class="row">
         <div class="col-md-2" *ngFor="let kus of kusKartlar; let i = index">
           <div class="card mb-4 category-card " (mouseenter)="kus.showButton = true" (mouseleave)="kus.showButton = false">
-            <img [src]="'assets/' + kus.gorseli" alt="Kedi Görseli" class="card-img-top">
+            <img [src]="'assets/images/' + kus.gorseli" alt="Kedi Görseli" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">{{ kus.adi }}</h5>
               <p class="card-text">Yaşı: {{ kus.yasi }}</p>
@@ -249,9 +249,9 @@
         <div style="width: 100%; margin-top: 75px;" >
           <h4>Sosyal Medya</h4>
           <div class="social-media">
-            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.svg" alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/instagram.svg" alt="Instagram"></a></li>
-          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/twitter.svg" alt="Twitter"></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><img src="assets/social-svg/facebook.svg" alt="Facebook"></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><img src="assets/social-svg/instagram.svg" alt="Instagram"></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><img src="assets/social-svg/twitter.svg" alt="Twitter"></a></li>
           </div>
         </div>
       </div>
@@ -270,7 +270,7 @@
         </div>
       </div>
       <div class="col-md-3  ">
-        <img src="assets/transparent-logo.png" alt="Logo" width="300" height="300">
+        <img src="assets/images/transparent-logo.png" alt="Logo" width="300" height="300">
       </div>
     </div>
     </div>
