--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,7 +1,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg " id="home" style="background-color: #4BA47E; padding: 0px;">
     <div class="container">
-      <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
+      <a class="navbar-brand" routerLinkActive="/" href="/">
         <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
