--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,7 +4,7 @@
 
   <div class="container">
 
-    <a class="navbar-brand" routerLinkActive="/homepage" href="/homepage">
+    <a class="navbar-brand" routerLinkActive="/" href="/">
 
       <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
 
