--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -22,7 +22,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link active" routerLinkActive="/homepage" href="/homepage">Ana Sayfa
+          <a class="nav-link active" routerLinkActive="/" href="/">Ana Sayfa
 
         </a></li>
 
@@ -267,7 +267,7 @@
 
           <div class="list">
 
-            <li><a class="nav-link" routerLink="/homepage" routerLinkActive="active" aria-current="page" href="homepage" >AnaSayfa</a></li>
+            <li><a class="nav-link active" routerLinkActive="/" href="/">AnaSayfa</a></li>
 
             <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="profile" >Profilim</a></li>
 
