--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -113,18 +113,18 @@
                   <div class="text-container">
                     <h5 class="card-title">{{ kedi.adi }}</h5>
                     <p class="card-text">Yaşı: {{ kedi.yasi }}</p>
-                    <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>  
+                    <p class="card-text">Cinsiyeti: {{ kedi.cinsiyeti }}</p>
                     <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p> 
+                    </p>
                   </div>
                 </div>
               </div>
-              
+
             </p-dialog>
         </div>
-        
+
         </div>
             <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
           </div>
@@ -155,7 +155,7 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p> 
+                    </p>
             </p-dialog>
             </div>
             </div>
@@ -166,7 +166,7 @@
       </div>
 
     </div>
-  
+
     <div *ngIf="seciliKategori === 'kuş'">
       <div class="row">
         <div class="col-md-2" *ngFor="let kus of kusKartlar; let i = index">
@@ -193,7 +193,7 @@
                       <p>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                      </p> 
+                      </p>
               </p-dialog>
               </div>
               <div id="animationContainer" class="animation-container" *ngIf="animationVisible && seciliKartIndex === i"></div>
@@ -264,7 +264,7 @@
           <div class="list">
           <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('home')">Anasayfa</a></li>
           <li><a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a></li>
-          <li><a class="nav-link" routerLink="/profile" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
+          <li><a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a></li>
           <li><a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#iletisim">İletişim</a></li>
           </div>
         </div>
@@ -276,7 +276,7 @@
     </div>
     <div class="container-fulid" style="background-color: #f0f0f0; ">
       <div class="col-md-12 text-center " style="height: 40px;">
-        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p> 
+        <p>&copy; 2023 Petship. Tüm hakları saklıdır.</p>
       </div>
   </div>
 
