--- a/src/app/modules/auth/loginc/loginc.component.html
+++ b/src/app/modules/auth/loginc/loginc.component.html
@@ -19,7 +19,7 @@
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" [(ngModel)]="loginRequest.password" name="password" placeholder="Şifre" class="form-style">
+                                                <input type="password" [(ngModel)]="loginRequest.Password" name="password" placeholder="Şifre" class="form-style">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
 
@@ -58,4 +58,3 @@
         </div>
     </div>
 </div>
-<p-toast></p-toast>
